update content in in.html

--- a/html/in.html
+++ b/html/in.html
@@ -102,7 +102,7 @@
                             value to <code>undefined</code>
 
                         <li>
-                            You can also use the in operator to check whether a particular private class field or method
+                            You can also use the <code>in</code> operator to check whether a particular private class field or method
                             has been defined in an
                             object
 
