update content in math_random.html

--- a/html/math_random.html
+++ b/html/math_random.html
@@ -93,8 +93,9 @@
                         <li><strong>Random Integer</strong>
                             <pre class="details-code-aclass space-top-bottom">
 Math.floor(
-    Math.random() * (max - min + 1) 
-) + min </pre><!-- code-content -->
+    Math.random() *
+      (max - min + 1) 
+ ) + min </pre><!-- code-content -->
 
                         <li>
                             <strong>Random Integer</strong>
