--- a/html/arrays.html
+++ b/html/arrays.html
@@ -83,7 +83,8 @@
                         <li>
                             JavaScript arrays are not associative arrays and so, array elements cannot be accessed using
                             arbitrary strings as
-                            indexes, but must be accessed using nonnegative integers (or their respective string form)
+                            indexes, but must be accessed using <strong>nonnegative integers</strong> (or their <string>
+                                respective string form</string>)
                             as indexes
                         <li>
                             JavaScript arrays are zero-indexed: the first element of an array is at index 0, the second
@@ -123,7 +124,33 @@ arr </pre><!-- code-content -->
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-INSERT CODE
+const myarr = [1,2,3]
+myarr[2] </pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
+3 </pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+3 </pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+
+                </article>
+
+
+                <article>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+const myarr = [1,2,3]
+myarr[-1]
   </pre><!-- code-content -->
                     </details><!--details CODE-->
 
@@ -135,23 +162,65 @@ INSERT CODE
                             [JavaScript Inserts]
                         </summary>
                         <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-</pre><!-- small-view -->
+undefined </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-</pre><!-- wide-view -->
+undefined </pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+
+                </article>
+
+
+                <article>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+const myarr =[1,2,3]
+myarr[myarr.length-1]
+  </pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
+3 </pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+3 </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
 
                 <article>
-                    <h1 class="count">Notes</h1>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+const arr =[1,2,3]
+myarr["1"]
+  </pre><!-- code-content -->
+                    </details><!--details CODE-->
 
-                    <ol>
-                        <li>I am an item</li>
-                    </ol>
+                    <br class="small-view">
+                    <br class="wide-view">
+
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
+2 </pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+2 </pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
 
                 </article>
+                <!--here-->
+
 
                 <article>
                     <h1 class="count refs-heading">References</h1>
