update content in array_sort.html

--- a/html/array_sort.html
+++ b/html/array_sort.html
@@ -80,7 +80,7 @@
                     <h1 class="count">Introduction</h1>
                     <ol>
                         <li>
-                            The <code>sort()</code> method of Array instances sorts the elements of an array in place
+                            The <code>sort()</code> method of Array instances sorts the elements of an array <strong>in place</strong>
                             and returns the reference to the same
                             array, now sorted
                         <li>
@@ -166,8 +166,7 @@ months.sort() </pre><!-- code-content -->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
 const arr = [1,2,100,200,3,4,34]
-arr.sort()
-  </pre><!-- code-content -->
+arr.sort() </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -191,8 +190,7 @@ arr.sort()
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
 const arr = [1,2,100,200,3,4,34]
-arr.sort((a,b)=> a-b)
-  </pre><!-- code-content -->
+arr.sort((a,b)=> a-b) </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -203,10 +201,9 @@ arr.sort((a,b)=> a-b)
                             [JavaScript Inserts]
                         </summary>
                         <pre class="details-console-aclass small-view">
-[ 1, 2, 3, 4, 34, 100, 200 ] <pre><!-- small-view -->
+[ 1, 2, 3, 4, 34, 100, 200 ] </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-[ 1, 2, 3, 4, 34, 100, 200 ]<pre><!-- small-view -->
-</pre><!-- wide-view -->
+[ 1, 2, 3, 4, 34, 100, 200 ] </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
@@ -271,8 +268,7 @@ arr2 </pre><!-- code-content -->
                         <pre class="details-code-aclass">
 const arr = [1,2,11]
 arr.sort()
-arr.sort((a,b)=>a-b)
-  </pre><!-- code-content -->
+arr.sort((a,b)=>a-b) </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -284,8 +280,7 @@ arr.sort((a,b)=>a-b)
                         </summary>
                         <pre class="details-console-aclass small-view">
 [ 1, 11, 2 ]
-[ 1, 2, 11 ]
-</pre><!-- small-view -->
+[ 1, 2, 11 ] </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
 [ 1, 11, 2 ]
 [ 1, 2, 11 ] </pre><!-- wide-view -->
