--- a/html/array_parts.html
+++ b/html/array_parts.html
@@ -123,8 +123,7 @@ arr[10]=10
 console.log(arr.length)
 console.log(arr[10])
 arr.length=10
-console.log(arr[10])
-              </pre><!-- code-content -->
+console.log(arr[10]) </pre><!-- code-content -->
           </details><!--details CODE-->
 
           <br class="small-view">
@@ -153,9 +152,8 @@ undefined               // arr[10] </pre><!-- wide-view -->
           <details open><!--details CODE-->
             <summary class="details-code-summary">[JavaScript Inserts]</summary>
             <pre class="details-code-aclass">
-const ao =Array.of("tom", "dick", "harry", 100, true)
-console.log(ao)
-              </pre><!-- code-content -->
+const ao = Array.of("tom", "dick", "harry", 100, true)
+console.log(ao) </pre><!-- code-content -->
           </details><!--details CODE-->
 
           <br class="small-view">
@@ -234,9 +232,41 @@ console.log(mya)
 [ 10, 10, 10, 10, 10 ] </pre><!-- wide-view -->
             <!--ususally inserted before details-console end tag-->
             <dl class="details-dl">
-              <dt>Note
+              <dt><code>.fill()</code>
+              <dd><code>arr.fill(value, start, end)</code>
+              <dd>fill all or part of an array with a static value
               <dd>Up to but not including end value
+              <dd>in place modification</dd>
             </dl>
+          </details><!--details CONSOLE -->
+
+        </article>
+
+        <article>
+          <h1 class="count">Code Example</h1>
+          <details open><!--details CODE-->
+            <summary class="details-code-summary">[JavaScript Inserts]</summary>
+            <pre class="details-code-aclass">
+const myarr = Array.from(Array(5).keys())
+
+console.log(myarr)
+myarr.fill(0)
+console.log(myarr) </pre><!-- code-content -->
+          </details><!--details CODE-->
+
+          <br class="small-view">
+          <br class="wide-view">
+
+          <details open><!--Details CONSOLE -->
+            <summary class="details-console-summary">
+              [JavaScript Inserts]
+            </summary>
+            <pre class="details-console-aclass small-view">
+[ 0, 1, 2, 3, 4 ]
+[ 0, 0, 0, 0, 0 ] </pre><!-- small-view -->
+            <pre class="details-console-aclass wide-view">
+[ 0, 1, 2, 3, 4 ]
+[ 0, 0, 0, 0, 0 ] </pre><!-- wide-view -->
           </details><!--details CONSOLE -->
 
         </article>
@@ -339,12 +369,9 @@ y </pre><!-- code-content -->
             <pre class="details-code-aclass">
 const myarr =Array.of(1,2,3)
 const x = myarr.push(100,200,300)
-myarr
-x
-myarr.length
-[ 1, 2, 3, 100, 200, 300 ]
-6
-6 </pre><!-- code-content -->
+console.log(myarr)
+console.log(x)
+console.log(myarr.length)</pre><!-- code-content -->
           </details><!--details CODE-->
 
           <br class="small-view">
@@ -439,6 +466,15 @@ const myarr = ["tom", "dick","harry", "megan"]
 const sliced =myarr.slice(1,3)
 console.log(myarr)
 console.log(sliced) </pre><!-- code-content -->
+            <!--ususally inserted before details-console end tag-->
+            <dl class="details-dl">
+              <dt><code>.slice()</code>
+              <dd>Does not modify the original array
+              <dd>Instead, it returns a shallow copy of a portion
+                of the array
+              <dd><code>array.slice(start, end)</code>
+              <dd><code>end</code> index is EXCLUSIVE
+            </dl>
           </details><!--details CODE-->
 
           <br class="small-view">
@@ -471,6 +507,14 @@ const a3 = myarr.splice(1,3,100,200,300)
 console.log(myarr)
 console.log(a2)
 console.log(a3) </pre><!-- code-content -->
+            <!--ususally inserted before details-console end tag-->
+            <dl class="details-dl">
+              <dt><code>.splice()</code>
+              <dd>The splice method modifies the array in place
+              <dd><code>array.splice(start, deleteCount, item1, item2, ...)</code>
+              <dd>Modifies the original array by removing or replacing existing elements and/or adding new elements
+              <dd>Returns an array of the removed elements
+            </dl>
           </details><!--details CODE-->
 
           <br class="small-view">
@@ -512,6 +556,7 @@ splice(start, deleteCount, item1, item2) </pre>
             <summary class="details-code-summary">[JavaScript Inserts]</summary>
             <pre class="details-code-aclass">
 const myarr =[...Array(5).keys()]
+console.log(myarr)
 const spliced=myarr.splice(1)
 console.log(myarr)
 console.log(spliced) </pre><!-- code-content -->
@@ -525,9 +570,11 @@ console.log(spliced) </pre><!-- code-content -->
               [JavaScript Inserts]
             </summary>
             <pre class="details-console-aclass small-view">
+[ 0, 1, 2, 3, 4 ]
 [ 0 ]
 [ 1, 2, 3, 4 ] </pre><!-- small-view -->
             <pre class="details-console-aclass wide-view">
+[ 0, 1, 2, 3, 4 ]
 [ 0 ]
 [ 1, 2, 3, 4 ] </pre><!-- wide-view -->
           </details><!--details CONSOLE -->
