--- a/html/functions.html
+++ b/html/functions.html
@@ -63,10 +63,10 @@
         <article>
           <noscript><span>This Web Site requires JavaScript!</span></noscript>
           <h1 class="count">Introduction</h1>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, suscipit odio? Obcaecati
-            repellendus nesciunt adipisci ratione ducimus dolorem ipsa dolores?
-          </p>
+          <ol>
+            <li>
+              A function without a return values returns <code>undefined</code>
+          </ol>
         </article>
 
         <article>
