update parse_float.html with chat-gpt section/content

--- a/html/parse_float.html
+++ b/html/parse_float.html
@@ -123,6 +123,24 @@ parseFloat(string) </pre>
                     </ol>
 
                 </article>
+                <article>
+                    <h1 class="count">Chat GPT</h1>
+                    <ol>
+                        <li>
+                            In JavaScript, <code>parseFloat()</code> is a built-in function that parses a string and
+                            returns the first
+                            floating-point number it
+                            finds
+                        <li>
+                            It reads the string from left to right
+                        <li>
+                            It ignores leading whitespace
+                        <li>
+                            It parses characters until it hits something that isn't part of a valid number
+                        <li>
+                            It returns <strong>a number</strong>x if parsing succeeds, otherwise NaN (Not a Number)
+                    </ol>
+                </article>
 
                 <article>
                     <h1 class="count">Code Example</h1>
