correct coding typo in pass_by_referebce

--- a/html/pass_by_object_sharing.html
+++ b/html/pass_by_object_sharing.html
@@ -239,11 +239,11 @@ console.log(myobj) </pre><!-- code-content -->
               [JavaScript Inserts]
             </summary>
             <pre class="details-console-aclass small-view">
-{ fname: 'dow', lname: 'tom' }
-{ fname: 'tom', lname: 'dow' }</pre><!-- small-view -->
+{ fname: 'tom', lname: 'dow' }
+{ fname: 'dow', lname: 'tom' } </pre><!-- small-view -->
             <pre class="details-console-aclass wide-view">
-{ fname: 'dow', lname: 'tom' }
-{ fname: 'tom', lname: 'dow' }</pre><!-- wide-view -->
+{ fname: 'tom', lname: 'dow' }
+{ fname: 'dow', lname: 'tom' } </pre><!-- wide-view -->
           </details><!--details CONSOLE -->
 
         </article>
